[gd_scene load_steps=41 format=3 uid="uid://bpv3aloctwm68"]

[ext_resource type="Script" path="res://player/player.gd" id="1_d1c6h"]
[ext_resource type="PackedScene" uid="uid://db0vj2er1030w" path="res://player/lowpoly_human.glb" id="1_hwvs0"]
[ext_resource type="Texture2D" uid="uid://cyrx24trd4bq4" path="res://player/hp_bar.png" id="3_cvvwc"]
[ext_resource type="Shader" path="res://shaders/dash_effect.gdshader" id="4_0xxrq"]
[ext_resource type="FontFile" uid="uid://ch1217g2yvnil" path="res://assets/fonts/Jacquard24-Regular.ttf" id="5_xvin7"]
[ext_resource type="PackedScene" uid="uid://cqeqw5hvxvymb" path="res://managers/stats_component.tscn" id="6_bjqp6"]
[ext_resource type="PackedScene" uid="uid://sq1j2jgq4wgf" path="res://managers/equipment_manager.tscn" id="7_i2p61"]
[ext_resource type="PackedScene" uid="uid://clka6ht2xkpew" path="res://managers/inventory.tscn" id="8_ahuyi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hep6y"]
bg_color = Color(0.937255, 0.517647, 0.466667, 0.658824)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.376471, 0.231373, 0.223529, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpdvm"]
bg_color = Color(0.823529, 0.32549, 0.329412, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.466667, 0.156863, 0.0941176, 1)
border_blend = true
shadow_color = Color(0.301961, 0.0862745, 0.0352941, 0.290196)
shadow_size = 2
shadow_offset = Vector2(2.08165e-12, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gxjb1"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_34vsj"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_pjfgq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_osg6u"]
shader = ExtResource("4_0xxrq")
shader_parameter/speed = 1.0
shader_parameter/line_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6fadg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wmd1n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oh7ma"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cpl0m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hi56q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tvnc6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_raynw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5wqln"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y0sj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_edjkq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iykya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_meeau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dtgph"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e8by3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hf8xo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ee1g4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4yod"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2umu0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2a16"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_38ld5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32unb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nraau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_76yl1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_woxmg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hvlsh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m36m8"]
radius = 0.760368
height = 4.47624

[node name="Player" groups=["player"] instance=ExtResource("1_hwvs0")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
floor_max_angle = 1.309
floor_snap_length = 0.6
script = ExtResource("1_d1c6h")

[node name="Camera3D" type="Camera3D" parent="." index="0"]
transform = Transform3D(3.33333, 0, 0, 0, 3.2824, 0.580489, 0, -0.580489, 3.2824, 0, 3.47111, 0.197471)
fov = 51.3

[node name="ProgressBar" type="ProgressBar" parent="Camera3D" index="0"]
offset_left = 15.0
offset_top = 16.0
offset_right = 161.0
offset_bottom = 35.0
theme_override_styles/background = SubResource("StyleBoxFlat_hep6y")
theme_override_styles/fill = SubResource("StyleBoxFlat_kpdvm")
value = 100.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="Camera3D" index="1"]
custom_minimum_size = Vector2(80, 20)
offset_left = 6.0
offset_top = 9.0
offset_right = 172.0
offset_bottom = 43.0
texture = ExtResource("3_cvvwc")
expand_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.93005, -0.113318)
shape = SubResource("CapsuleShape3D_gxjb1")

[node name="AttackSounds" type="AudioStreamPlayer3D" parent="." index="2"]
stream = SubResource("AudioStreamWAV_34vsj")
volume_db = -2.286
max_db = -1.142

[node name="FootSounds" type="AudioStreamPlayer3D" parent="." index="3"]
transform = Transform3D(3.33333, 0, 0, 0, 3.33333, 0, 0, 0, 3.33333, 0, 0, 0)
stream = SubResource("AudioStreamWAV_pjfgq")
volume_db = -15.556
max_db = -12.555
pitch_scale = 0.93

[node name="HurtSounds" type="AudioStreamPlayer3D" parent="." index="4"]
stream = SubResource("AudioStreamWAV_34vsj")
volume_db = -11.429
max_db = -6.285

[node name="BlockSounds" type="AudioStreamPlayer3D" parent="." index="5"]
transform = Transform3D(3.33333, 0, 0, 0, 3.33333, 0, 0, 0, 3.33333, 0, 0, 0)
volume_db = -2.255
max_db = -2.25
pitch_scale = 1.2

[node name="DashSounds" type="AudioStreamPlayer3D" parent="." index="6"]
transform = Transform3D(3.33333, 0, 0, 0, 3.33333, 0, 0, 0, 3.33333, 0, 0, 0)
volume_db = -8.746
max_db = -8.419
pitch_scale = 1.2

[node name="CanvasLayer" type="CanvasLayer" parent="." index="7"]

[node name="DashEffect" type="ColorRect" parent="CanvasLayer" index="0"]
visible = false
material = SubResource("ShaderMaterial_osg6u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CoinCounter" type="Label" parent="CanvasLayer" index="1"]
visible = false
offset_left = 581.0
offset_top = 10.0
offset_right = 621.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_colors/font_shadow_color = Color(0.206914, 0.206914, 0.206914, 1)
theme_override_fonts/font = ExtResource("5_xvin7")

[node name="InteractionText" type="Label" parent="CanvasLayer" index="2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.796078)
theme_override_fonts/font = ExtResource("5_xvin7")

[node name="VictoryScreen" type="ColorRect" parent="CanvasLayer" index="3"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0584206, 0.0584206, 0.0584206, 1)

[node name="Label" type="Label" parent="CanvasLayer/VictoryScreen" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -29.0
offset_right = 139.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.831373)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 26
text = "Thou hast completed the level!"

[node name="RestartButton" type="Button" parent="CanvasLayer/VictoryScreen" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = 17.0
offset_right = 37.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0.812007, 0.527226, 1)
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6fadg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wmd1n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_oh7ma")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cpl0m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hi56q")
text = "Tryeth again"

[node name="PauseMenu" type="ColorRect" parent="CanvasLayer" index="4"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0584206, 0.0584206, 0.0584206, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -26.5
offset_right = 28.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/PauseMenu/VBoxContainer" index="0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 32
text = "– PAUSED –"

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer" index="1"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.812007, 0.527226, 1)
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_tvnc6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_raynw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5wqln")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y0sj4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_edjkq")
text = "Resume"

[node name="Controls" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer" index="2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.812007, 0.527226, 1)
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_iykya")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_meeau")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dtgph")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e8by3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hf8xo")
text = "Controls"

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer" index="3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.812007, 0.527226, 1)
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee1g4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_g4yod")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2umu0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v2a16")
theme_override_styles/normal = SubResource("StyleBoxEmpty_38ld5")
text = "Quit"

[node name="ControlsScreen" type="ColorRect" parent="CanvasLayer" index="5"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0584206, 0.0584206, 0.0584206, 1)

[node name="Title" type="Label" parent="CanvasLayer/ControlsScreen" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -148.0
offset_right = 139.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 64
text = "– Controls –"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/ControlsScreen" index="1"]
custom_minimum_size = Vector2(220, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -68.0
offset_right = 138.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("5_xvin7")
theme_override_font_sizes/normal_font_size = 20
text = "WASD = Movement
Shift = Dash
Space = Jump
Left Mouse = Vertical Swing
Right Mouse = Horizontal Swing
Alt = Block
F = Interact
Esc = Pause Menu"

[node name="Back" type="Button" parent="CanvasLayer/ControlsScreen" index="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 133.0
offset_right = 15.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_38ld5")
text = "Back"

[node name="DeathScreen" type="ColorRect" parent="CanvasLayer" index="6"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0584206, 0.0584206, 0.0584206, 1)

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -65.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.731036, 0.237622, 0.269795, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.890196)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 64
text = "Thou didst die"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/DeathScreen" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = 19.0
offset_right = 74.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0.812007, 0.527226, 1)
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("5_xvin7")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_32unb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nraau")
theme_override_styles/hover = SubResource("StyleBoxEmpty_76yl1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_woxmg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hvlsh")
text = "Tryeth again"

[node name="SpotLight3D" type="SpotLight3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 0.990505, 0.137479, 0, -0.137479, 0.990505, 0.0494785, 3.83853, 1.61818)
light_color = Color(0.915084, 0.775354, 0.566474, 1)
light_energy = 2.0
spot_range = 4.192
spot_angle = 50.0

[node name="metarig" parent="." index="9"]
transform = Transform3D(1.1, -1.66095e-07, 0, 1.66095e-07, 1.1, 0, 0, 0, -1.1, 0.00167304, 1.08973, -0.0174842)

[node name="Skeleton3D" parent="metarig" index="0"]
bones/1/rotation = Quaternion(-0.193861, -0.451904, 0.393697, 0.776662)
bones/2/rotation = Quaternion(0.377213, 0.0602514, 0.0186297, 0.923977)
bones/3/rotation = Quaternion(0.218258, -0.681473, -0.364115, 0.596136)
bones/4/position = Vector3(0.0019749, 0.04062, 0.0404956)
bones/4/rotation = Quaternion(-0.0577172, -0.784095, -0.155438, 0.598082)
bones/5/position = Vector3(5.4801e-08, 0.0716584, -6.09303e-08)
bones/5/rotation = Quaternion(0.455837, 0.240573, -0.00373619, 0.856927)
bones/6/position = Vector3(0.0370052, -0.0244713, -0.00221781)
bones/6/rotation = Quaternion(-0.257654, -0.672819, -0.225825, 0.655692)
bones/7/rotation = Quaternion(0.198593, 0.0277781, -0.0630114, 0.97766)
bones/8/position = Vector3(0.000453568, 0.0480177, -0.0286546)
bones/8/rotation = Quaternion(-0.0297537, -0.750502, -0.100291, 0.652536)
bones/9/rotation = Quaternion(0.42545, 0.0747199, -0.110373, 0.895113)
bones/10/rotation = Quaternion(0.483504, 0.516091, 0.516289, -0.483032)
bones/11/rotation = Quaternion(-0.170155, 0.215832, -0.592301, 0.757393)
bones/12/rotation = Quaternion(0.356337, 0.0915881, -0.103786, 0.924048)
bones/13/rotation = Quaternion(0.0375102, 0.318956, -0.00948803, 0.946979)
bones/14/rotation = Quaternion(0.125197, 0.708888, -0.105412, 0.68607)
bones/15/rotation = Quaternion(0.82214, -0.189901, -0.289879, 0.451656)
bones/16/position = Vector3(-0.0150749, -0.0454078, 0.0241388)
bones/16/rotation = Quaternion(-0.037325, 0.452031, 0.508159, 0.732154)
bones/17/rotation = Quaternion(0.403361, 0.738637, 0.35489, 0.407146)
bones/18/position = Vector3(0.0100088, 0.093164, -0.028897)
bones/19/rotation = Quaternion(0.866599, 0.0193756, -0.0590102, 0.495124)

[node name="Cube_001" parent="metarig/Skeleton3D" index="0"]
transform = Transform3D(0.120096, -0.213713, 0.0589446, 0.1545, 0.18241, 0.00696138, 0.0425607, -0.059121, -0.191597, 0.277814, 1.7945, 0.666314)

[node name="Hitbox" type="Area3D" parent="metarig/Skeleton3D/Cube_001/Cube_001" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="metarig/Skeleton3D/Cube_001/Cube_001/Hitbox" index="0"]
transform = Transform3D(1, -2.98023e-08, 1.04308e-07, 9.31323e-09, 1, 7.45058e-08, 2.98023e-08, 0, 1, 0.0477715, 2.30592, 0.0824292)
shape = SubResource("CapsuleShape3D_m36m8")

[node name="StatsComponent" parent="." index="11" instance=ExtResource("6_bjqp6")]

[node name="EquipmentManager" parent="." index="12" instance=ExtResource("7_i2p61")]

[node name="Inventory" parent="." index="13" instance=ExtResource("8_ahuyi")]

[connection signal="pressed" from="CanvasLayer/VictoryScreen/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlsScreen/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/DeathScreen/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="body_entered" from="metarig/Skeleton3D/Cube_001/Cube_001/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
